--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <head>
         <title>W.B Rocks...</title> 
         <link rel="stylesheet" type="text/css" href="I.CSS">
-        
+         <meta charset="utf-8"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
             <body>
                 
